Revision history for {{$dist->name}}

{{$NEXT}}

0.037     2019-03-25 17:42:43+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - boolean comparison on Ryu::Observable instances caused a warning

0.036     2019-02-08 17:14:51+08:00 Asia/Kuala_Lumpur
    New features:
    
    - ->skip_until will filter out any items until the given condition
    is reached (either Future being true, or coderef returning true)

0.035     2019-01-02 01:37:38+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - dist.ini file should now be included, thanks Grinnz

0.034     2019-01-02 00:19:29+08:00 Asia/Kuala_Lumpur
    Bugs fixed:

    - better support for sync chains: we now call the `->{on_get}` callback
    recursively if available.

    Developer updates:

    - moved from the old manual dist.ini content to a plugin bundle,
    hopefully this doesn't cause too much breakage

0.033     2018-12-21 15:35:22+08:00 Asia/Kuala_Lumpur
    Bugs fixed:

    - the ordered futures method ->resolve should not complete
    until all incoming entries are received and resolved

0.032     2018-12-15 20:20:24+08:00 Asia/Kuala_Lumpur
    New features:

    - ->buffer now supports high/low watermark
    - ->is_paused($obj) will check to see if the node is
    paused on request from $obj

0.031     2018-12-13 23:03:16+08:00 Asia/Kuala_Lumpur
    New features:

    - ->buffer method for collecting items while a source/sink
    are paused
    - ->retain method for keeping sources around

0.030     2018-12-13 20:58:38+08:00 Asia/Kuala_Lumpur
    New features:

    - flow control expanded and moved to the Ryu::Node
    parent class

    Bugs fixed:

    - resolved some edge cases where handlers can be
    added/removed during callback loops
    - the ->source inside a Ryu::Sink for handling events
    is now preserved when attaching an external source
    via ->from

0.029     2018-12-02 14:20:37+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:
